<resources>
    <string name="app_name">MovieDb</string>
    <string name="message_retry">Check your connection and try again.</string>
    <string name="action_retry">retry</string>
    <string name="action_more">More</string>
    <string name="title_now_playing">Now Playing Movies</string>
    <string name="title_popular">Popular Movies</string>
    <string name="title_top_rated">Top Rated Movies</string>
    <string name="title_upcoming">Upcoming Movies</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_search">Result for</string>
    <string name="message_no_item">No item in favorite ^^</string>
    <string name="title_review">Review</string>
    <string name="title_share">Share</string>
    <string name="title_overview">Overview</string>
    <string name="title_genres">Genres</string>
    <string name="title_video">Videos</string>
    <string name="title_cast">Casts</string>
    <string name="title_company">Companies</string>
    <string name="message_youtube_error">There was an error initializing the YouTubePlayer</string>
    <string name="message_no_review">No review for this movie ^^</string>
    <string name="message_no_search_result">No result ^^</string>
</resources>
