<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:bind="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>

        <import type="com.framgia.moviedb.util.LayoutManagerUtil"/>

        <import type="android.support.v7.widget.LinearLayoutManager"/>

        <variable
            name="movieDetail"
            type="com.framgia.moviedb.feature.moviedetail.MovieDetailActivity"/>

        <variable
            name="presenter"
            type="com.framgia.moviedb.feature.moviedetail.MovieDetailContract.Presenter"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_250"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:title="@{movieDetail.movie.title}">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        app:layout_collapseMode="parallax"
                        app:imageUrl="@{movieDetail.movie.backdrop != null ? movieDetail.movie.fullBackdropUrl : movieDetail.movie.fullPosterUrl}"/>

                    <ImageView
                        android:id="@+id/image_play"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_play"
                        android:layout_centerInParent="true"
                        android:visibility="@{ movieDetail.isShowShare ? View.VISIBLE : View.GONE}"
                        android:onClick="@{() -> presenter.openVideoDetail(movieDetail.movie.video.key)}"/>
                </RelativeLayout>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"/>

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_16"
                android:descendantFocusability="blocksDescendants">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image_movie_poster"
                        android:layout_width="@dimen/dp_120"
                        android:layout_height="@dimen/dp_180"
                        android:scaleType="centerCrop"
                        android:layout_alignParentLeft="true"
                        app:imageUrl="@{movieDetail.movie.fullPosterUrl}"/>

                    <ImageView
                        android:id="@+id/image_movie_favorite"
                        android:layout_width="@dimen/dp_32"
                        android:layout_height="@dimen/dp_32"
                        android:paddingRight="@dimen/dp_5"
                        android:src="@{movieDetail.movie.favorite ? @drawable/ic_favorite_filled : @drawable/ic_favorite}"
                        android:layout_alignParentRight="true"
                        android:onClick="@{() -> presenter.updateFavorite(movieDetail.movie.type, movieDetail.movie)}"/>

                    <TextView
                        android:id="@+id/text_movie_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/image_movie_poster"
                        android:layout_toLeftOf="@id/image_movie_favorite"
                        android:paddingLeft="@dimen/dp_10"
                        android:textColor="@android:color/black"
                        android:text="@{movieDetail.movie.title}"
                        android:textSize="@dimen/sp_20"/>

                    <TextView
                        android:id="@+id/text_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_movie_title"
                        android:layout_toRightOf="@+id/image_movie_poster"
                        android:paddingLeft="@dimen/dp_10"
                        android:textSize="@dimen/sp_16"
                        android:text="@{movieDetail.movie.releaseDate}"/>

                    <TextView
                        android:id="@+id/text_movie_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_release_date"
                        android:layout_toRightOf="@+id/image_movie_poster"
                        android:paddingLeft="@dimen/dp_10"
                        android:textSize="@dimen/sp_16"
                        android:text="@{movieDetail.movie.voteAverage}"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_toRightOf="@+id/text_movie_rate"
                        android:layout_alignBottom="@+id/text_movie_rate"
                        android:layout_alignTop="@+id/text_movie_rate"
                        android:src="@drawable/ic_vote"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/image_movie_poster"
                        android:layout_alignParentBottom="true"
                        android:paddingLeft="@dimen/dp_10"
                        android:text="@string/title_review"
                        android:textAllCaps="false"
                        android:textSize="@dimen/sp_18"
                        android:textColor="@color/color_accent"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:onClick="@{() -> presenter.openMovieReview(movieDetail.movie.title, String.valueOf(movieDetail.movie.id))}"/>

                    <TextView
                        android:id="@+id/text_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:paddingRight="@dimen/dp_5"
                        android:text="@string/title_share"
                        android:textSize="@dimen/sp_18"
                        android:textColor="@color/color_accent"
                        android:textAllCaps="false"
                        android:visibility="@{ movieDetail.isShowShare ? View.VISIBLE : View.GONE}"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:onClick="@{() -> presenter.shareLink(movieDetail.movie.title, movieDetail.movie.video.key)}"/>

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_marginBottom="@dimen/dp_8"
                    android:layout_height="@dimen/dp_1"
                    android:background="@android:color/darker_gray"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_20"
                    android:text="@string/title_overview"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_18"
                    android:text="@{movieDetail.movie.overview}"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_marginBottom="@dimen/dp_8"
                    android:layout_height="@dimen/dp_1"
                    android:background="@android:color/darker_gray"/>

                <ProgressBar
                    android:id="@+id/progress_loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:visibility="@{movieDetail.isLoading ? View.VISIBLE : View.GONE}"/>

                <include
                    android:id="@+id/linear_retry"
                    layout="@layout/retry_notification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    bind:isVisible="@{movieDetail.isError}"
                    bind:presenter="@{presenter}"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="@{(!movieDetail.isLoading &amp;&amp; !movieDetail.isError) ? View.VISIBLE : View.GONE}">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/sp_20"
                        android:text="@string/title_genres"
                        android:textColor="@android:color/black"/>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_genres"
                        android:layout_marginTop="@dimen/dp_10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        bind:adapter="@{movieDetail.genreAdapter}"
                        bind:layoutManager="@{LayoutManagerUtil.linear(LinearLayoutManager.HORIZONTAL)}"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_marginTop="@dimen/dp_16"
                        android:layout_marginBottom="@dimen/dp_8"
                        android:layout_height="@dimen/dp_1"
                        android:background="@android:color/darker_gray"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/sp_20"
                        android:text="@string/title_video"
                        android:textColor="@android:color/black"/>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_video"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        bind:adapter="@{movieDetail.videoAdapter}"
                        bind:layoutManager="@{LayoutManagerUtil.linear(LinearLayoutManager.HORIZONTAL)}"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_marginTop="@dimen/dp_16"
                        android:layout_marginBottom="@dimen/dp_8"
                        android:layout_height="@dimen/dp_1"
                        android:background="@android:color/darker_gray"/>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/sp_20"
                        android:text="@string/title_cast"
                        android:textColor="@android:color/black"/>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_cast"
                        android:layout_marginTop="@dimen/dp_10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        bind:adapter="@{movieDetail.castAdapter}"
                        bind:layoutManager="@{LayoutManagerUtil.linear(LinearLayoutManager.HORIZONTAL)}"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_marginTop="@dimen/dp_16"
                        android:layout_marginBottom="@dimen/dp_8"
                        android:layout_height="@dimen/dp_1"
                        android:background="@android:color/darker_gray"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/sp_20"
                        android:text="@string/title_company"
                        android:textColor="@android:color/black"/>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_company"
                        android:layout_marginTop="@dimen/dp_10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        bind:adapter="@{movieDetail.companyAdapter}"
                        bind:layoutManager="@{LayoutManagerUtil.linear(LinearLayoutManager.HORIZONTAL)}"/>

                </LinearLayout>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>
</layout>
